--- a/package.json
+++ b/package.json
@@ -31,15 +31,10 @@
   },
   "homepage": "https://github.com/sdd/serverless-dynalite#readme",
   "dependencies": {
-    "aws-sdk": "^2.41.0",
+    "aws-sdk": "^2.463.0",
     "babel-polyfill": "^6.26.0",
-    "dynalite": "^1.2.0",
-    "graceful-chokidar": "^0.1.0",
-    "lodash": "^4.17.4"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1"
+    "chokidar": "^3.0.0",
+    "dynalite": "^2.3.1",
+    "lodash": "^4.17.11"
   }
 }
